--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,9 @@ minversion = 1.8
 envlist =
     docs,
     flake8,
-    py{36,37,38,39,310}-django{22,30,31,32}
+    py{36,37,38,39,310}-django{22,30,31,32},
+    # new matrix line because django 4.0 only supports python 3.8-3.10
+    py{38,39,310}-django{40}
 toxworkdir=/tmp/.tox
 temp_dir=/tmp/.tmp
 
@@ -21,6 +23,7 @@ deps =
     django30: Django>=3.0,<3.1
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
+    django40: Django>=4.0,<4.1
     -r{toxinidir}/tests/requirements.txt
 commands = python -m pytest django_superform {posargs:tests}
 
